--- a/ui/src/main/webapp/WEB-INF/web.xml
+++ b/ui/src/main/webapp/WEB-INF/web.xml
@@ -39,5 +39,11 @@
         <servlet-name>application</servlet-name>
         <url-pattern>/showBooks</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>application</servlet-name>
+        <url-pattern>/buyBook</url-pattern>
+    </servlet-mapping>
+
+
 
 </web-app>
