--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -39,6 +39,13 @@
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.project</groupId>
+            <artifactId>models</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
