--- a/ui/src/main/resources/log4j.properties
+++ b/ui/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.rootLogger=INFO, file
 # appender for working with files
 log4j.appender.file=org.apache.log4j.RollingFileAppender
 # file path
-log4j.appender.file.File=C:\\Users\\Lidiia_Agurova\\IdeaProjects\\spring-mvc-project-master\\dal\\src\\main\\resources\\data_base_log_file.log
+log4j.appender.file.File=C:\\Users\\Lidiia_Agurova\\IdeaProjects\\spring-mvc-project-master\\ui\\src\\main\\resources\\ui_log_file.log
 # max log file size
 log4j.appender.file.MaxFileSize=1MB
 # output pattern
