--- a/dal/pom.xml
+++ b/dal/pom.xml
@@ -28,6 +28,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>LATEST</version>
+        </dependency>
 
         <dependency>
             <groupId>com.project</groupId>
