--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>service</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>LATEST</version>
+        </dependency>
+        <dependency>
             <groupId>com.project</groupId>
             <artifactId>dal</artifactId>
             <version>1.0-SNAPSHOT</version>
